--- a/_includes/global/footer.html
+++ b/_includes/global/footer.html
@@ -5,15 +5,32 @@
       <h4 class="highlight">We believe in a spam free inbox. That's why we will never send you more than one email a week. If you want more frequent
          updates, consider checking out our Facebook or Instagram.</h4>
 
-      <form id="newsletterForm">
+
+      
+      <!--<form id="newsletterForm">
          <input required type="email" name="email" id="email" required type="email" placeholder="your@awesome-email.com" />
          <input class="newsletterButton" type="submit" value="Sign me up!">
+      </form>-->
+      
+      <form action="//sixftover.us13.list-manage.com/subscribe/post?u=38de25d6e0e2ba0d247b9933c&amp;id=8c44c85d67" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+         <div id="mc_embed_signup_scroll newsletterForm">
+         
+         <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address </label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="your@awesome-email.com">
+         </div>
+
+         <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+         </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_38de25d6e0e2ba0d247b9933c_8c44c85d67" tabindex="-1" value=""></div>
+         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button newsletterButton"></div>
+         </div>
       </form>
 
    </div>
 </section>
-
-
 
 <footer>
 
