--- a/_includes/global/importsFooter.html
+++ b/_includes/global/importsFooter.html
@@ -1,18 +1,19 @@
 <!-- jQuery 3.2.1 -->
-<script src="{{ site.url }}{{ site.baseurl }}/js/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
 
 
 <!-- jQuery > Unveil, lazy load images -->
-<script src="{{ site.url }}{{ site.baseurl }}/js/jquery.unveil.js" type="text/javascript"></script>
+<script src="{{ site.url }}{{ site.baseurl }}js/jquery.unveil.js" type="text/javascript"></script>
 <script>
-	$(document).ready(function() {
-		$("img").unveil();
-	});
+    $(document).ready(function () {
+        $("img").unveil();
+    });
+
 </script>
 
 
 <!-- Instafeed, instagram images -->
-<script src="{{ site.url }}{{ site.baseurl }}/js/instafeed.min.js" type="text/javascript"></script>
+<script src="{{ site.url }}{{ site.baseurl }}js/instafeed.min.js" type="text/javascript"></script>
 <script>
     var userFeed = new Instafeed({
         get: 'user',
@@ -23,97 +24,98 @@
         accessToken: '5453885940.ecd67b3.8a01a526df134951ae7349de8ad5a618',
         template: '<div class="instagramPhoto"><a href="{{link}}" class="instagramPhotoInside" target="_blank" rel="nofollow" style="background-image:url({{image}})" ></a></div>'
     });
-userFeed.run();
+    userFeed.run();
+
 </script>
 
 
-<!-- TypeIt, typing title -->
-<script src="{{ site.url }}{{ site.baseurl }}/js/typeit.min.js" type="text/javascript"></script>
+<!-- jQuery > TypeIt, typing title -->
+<script src="{{ site.url }}{{ site.baseurl }}js/typeit.min.js" type="text/javascript"></script>
 <script>
-	$('#typing').typeIt({
-		strings: ["Six Feet Over.", "tasting new food.", "exploring new cities.", "taking photos."],
-     // options
-		 //speed: 50,
-     breakLines: false,
-		 loop: true,
-		 deleteDelay: 2000,
-     //autoStart: false
-});
+    $('#typing').typeIt({
+        strings: ["Six Feet Over.", "tasting new food.", "exploring new cities.", "taking photos."],
+        // options
+        //speed: 50,
+        breakLines: false,
+        loop: true,
+        deleteDelay: 2000,
+        //autoStart: false
+    });
+
 </script>
 
 
 <!-- World Map --
 <script src="{{ site.url }}{{ site.baseurl }}/js/mapdata.js" type="text/javascript"></script>		
 <script src="{{ site.url }}{{ site.baseurl }}/js/worldmap.js" type="text/javascript"></script>-->
-<script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
-<script type='text/javascript' src='https://www.google.com/jsapi'></script>
+<script src='https://www.gstatic.com/charts/loader.js' type='text/javascript'></script>
+<script src='https://www.google.com/jsapi' type='text/javascript'></script>
 <script type='text/javascript'>
-   google.charts.load('42', {'packages':['geochart']});
-   google.charts.setOnLoadCallback(drawVisualization);
+    google.charts.load('42', { 'packages': ['geochart'] });
+    google.charts.setOnLoadCallback(drawVisualization);
 
-   function drawVisualization() {var data = new google.visualization.DataTable();
+    function drawVisualization() {
+        var data = new google.visualization.DataTable();
 
-   data.addColumn('string', 'Country');
-   data.addColumn('number', 'Value'); 
-   data.addColumn({type:'string', role:'tooltip'});var ivalue = new Array();
+        data.addColumn('string', 'Country');
+        data.addColumn('number', 'Value');
+        data.addColumn({ type: 'string', role: 'tooltip' }); var ivalue = new Array();
 
-   data.addRows([[{v:'GB',f:'United Kingdom'},0,'']]);
-   ivalue['GB'] = '';
+        data.addRows([[{ v: 'GB', f: 'United Kingdom' }, 0, '']]);
+        ivalue['GB'] = '';
 
-   data.addRows([[{v:'US',f:'United States'},1,'']]);
-   ivalue['US'] = '';
+        data.addRows([[{ v: 'US', f: 'United States' }, 1, '']]);
+        ivalue['US'] = '';
 
-   data.addRows([[{v:'CN',f:'China'},2,'']]);
-   ivalue['CN'] = '';
+        data.addRows([[{ v: 'CN', f: 'China' }, 2, '']]);
+        ivalue['CN'] = '';
 
-   data.addRows([[{v:'KR',f:'South Korea'},3,'']]);
-   ivalue['KR'] = '';
+        data.addRows([[{ v: 'KR', f: 'South Korea' }, 3, '']]);
+        ivalue['KR'] = '';
 
-   data.addRows([[{v:'BE',f:'Belgium'},4,'']]);
-   ivalue['BE'] = '';
+        data.addRows([[{ v: 'BE', f: 'Belgium' }, 4, '']]);
+        ivalue['BE'] = '';
 
-   data.addRows([[{v:'IT',f:'Italy'},5,'']]);
-   ivalue['IT'] = '';
+        data.addRows([[{ v: 'IT', f: 'Italy' }, 5, '']]);
+        ivalue['IT'] = '';
 
-   data.addRows([[{v:'IS',f:'Iceland'},6,'']]);
-   ivalue['IS'] = '';
+        data.addRows([[{ v: 'IS', f: 'Iceland' }, 6, '']]);
+        ivalue['IS'] = '';
 
-   var options = {
-   backgroundColor: {fill:'transparent',stroke:'#17172e' ,strokeWidth:'1px' },
-   colorAxis:  {minValue: 0, maxValue: 6,  colors: ['#7E7EE6','#7E7EE6','#7e7ee6','#7e7ee6','#7e7ee6','#7e7ee6','#7e7ee6']},
-   legend: 'none',	
-   datalessRegionColor: '#e9e9f0',
-   displayMode: 'regions', 
-   enableRegionInteractivity: 'true', 
-   resolution: 'countries',
-   sizeAxis: {minValue: 1, maxValue:1,minSize:10,  maxSize: 10},
-   region:'world',
-   keepAspectRatio: true,
-   width:null,
-   height:null,
-   tooltip: {textStyle: {color: '#7E7EE6'}, trigger:'focus', isHtml: false}	
-   };
-   var chart = new google.visualization.GeoChart(document.getElementById('visualization')); 
-   google.visualization.events.addListener(chart, 'select', function() {
-   var selection = chart.getSelection();
-   if (selection.length == 1) {
-   var selectedRow = selection[0].row;
-   var selectedRegion = data.getValue(selectedRow, 0);
-   if(ivalue[selectedRegion] != '') { document.location = ivalue[selectedRegion];  }
-   }
-   });
-   chart.draw(data, options);
-   }
-   window.onresize = function(event) {
-      drawVisualization();
-   };
- </script>
+        var options = {
+            backgroundColor: { fill: 'transparent', stroke: '#17172e', strokeWidth: '1px' },
+            colorAxis: { minValue: 0, maxValue: 6, colors: ['#7E7EE6', '#7E7EE6', '#7e7ee6', '#7e7ee6', '#7e7ee6', '#7e7ee6', '#7e7ee6'] },
+            legend: 'none',
+            datalessRegionColor: '#e9e9f0',
+            displayMode: 'regions',
+            enableRegionInteractivity: 'true',
+            resolution: 'countries',
+            sizeAxis: { minValue: 1, maxValue: 1, minSize: 10, maxSize: 10 },
+            region: 'world',
+            keepAspectRatio: true,
+            width: null,
+            height: null,
+            tooltip: { textStyle: { color: '#7E7EE6' }, trigger: 'focus', isHtml: false }
+        };
+        var chart = new google.visualization.GeoChart(document.getElementById('visualization'));
+        google.visualization.events.addListener(chart, 'select', function () {
+            var selection = chart.getSelection();
+            if (selection.length == 1) {
+                var selectedRow = selection[0].row;
+                var selectedRegion = data.getValue(selectedRow, 0);
+                if (ivalue[selectedRegion] != '') { document.location = ivalue[selectedRegion]; }
+            }
+        });
+        chart.draw(data, options);
+    }
+    window.onresize = function (event) {
+        drawVisualization();
+    };
+</script>
+
 
 
 <link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/style.css">
-
-
-
 
 
 
