--- a/_includes/headerBlog.html
+++ b/_includes/headerBlog.html
@@ -14,7 +14,7 @@
 
 		</a>
 	</div>
-	<div class="bg-image" style="background-image: url('{{ post.thumbnail }}')">
+	<div class="bg-image" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ post.thumbnail }}')">
 		<div class="overlay"></div>
 	</div>
 	{% endfor %}
