--- a/_includes/headerHome.html
+++ b/_includes/headerHome.html
@@ -5,5 +5,5 @@
 			<h1>We are <span id="typing"></span></h1>
 		</div>
 	</div>
-	<div class="bg-image" style="background-image: url('{{ page.thumbnail }}')"></div>
+	<div class="bg-image" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ page.thumbnail }}')"></div>
 </header>
