--- a/_includes/headerArticle.html
+++ b/_includes/headerArticle.html
@@ -14,7 +14,10 @@
 
 		</div>
 	</div>
-	<div class="bg-image" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ page.thumbnail }}')">
+	<div 
+		class="bg-image"
+		style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ page.thumbnail }}')"
+	>
 		<div class="overlay"></div>
 	</div>
 </header>
