--- a/sass/parts/elements/_global.scss
+++ b/sass/parts/elements/_global.scss
@@ -61,6 +61,13 @@
 	}
 }
 
+ .b-lazy {
+	 transition: opacity 500ms ease-in-out;
+	 max-width: 100%;
+	 opacity: 0;
+	 &.b-loaded {opacity: 1;}
+}
+
 @media only screen and (max-width: $maxbody) {
 }
 @media only screen and (max-width: $minbody) {
