--- a/_includes/global/importsFooter.html
+++ b/_includes/global/importsFooter.html
@@ -1,13 +1,14 @@
-<!-- jQuery 3.2.1 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+<!-- jbLazy, lazy load images -->
+<script src="//cdn.jsdelivr.net/blazy/latest/blazy.min.js" type="text/javascript"></script>
+ <script>
+     ;(function() {
+         // Initialize
+         var bLazy = new Blazy({
+             //container: '#scrolling-container' // Default is window
+         });
+        })();
 
 
-<!-- jQuery > Unveil, lazy load images -->
-<script src="{{ site.url }}{{ site.baseurl }}js/jquery.unveil.js" type="text/javascript"></script>
-<script>
-    $(document).ready(function () {
-        $("img").unveil();
-    });
 
 </script>
 
@@ -22,26 +23,22 @@
         sortBy: 'most-recent',
         resolution: 'standard_resolution',
         accessToken: '5453885940.ecd67b3.8a01a526df134951ae7349de8ad5a618',
-        template: '<div class="instagramPhoto"><a href="{{link}}" class="instagramPhotoInside" target="_blank" rel="nofollow" style="background-image:url({{image}})" ></a></div>'
+        //template: '<a class="instagramPhoto" href="{{link}}"><img src="{{image}}" /></a>'
     });
     userFeed.run();
 
 </script>
 
 
-<!-- jQuery > TypeIt, typing title -->
-<script src="{{ site.url }}{{ site.baseurl }}js/typeit.min.js" type="text/javascript"></script>
+<!-- Native Typed, typing title -->
+<script src="{{ site.url }}{{ site.baseurl }}js/native-typed.min.js" type="text/javascript"></script>
 <script>
-    $('#typing').typeIt({
-        strings: ["Six Feet Over.", "tasting new food.", "exploring new cities.", "taking photos."],
-        // options
-        //speed: 50,
-        breakLines: false,
-        loop: true,
-        deleteDelay: 2000,
-        //autoStart: false
+    new NTyped(document.querySelector('#typing'), {
+        strings: ['Six Feet Over.', 'tasting new food.', 'exploring new cities.', 'taking photos.'],
+        typeSpeed: 30,
+        deleteSpeed: 15,
+        loop: true
     });
-
 </script>
 
 
