--- a/_includes/topics.html
+++ b/_includes/topics.html
@@ -3,7 +3,7 @@
 
 		{% for topic in site.data.topics %}
 		<li>
-			<a href="{{ topic.url }}" class="topic">
+			<a href="{{ site.url }}{{ site.baseurl }}{{ topic.url }}" class="topic">
 					
 					{% if topic.name == "adventure" %}
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
