--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,7 +1,7 @@
 <a class="card card-article" href="{{ site.url }}{{ site.baseurl }}{{ post.url }}">
 	<div class="title">
 
-		<h6>{{ post.date }}</h6>
+		<h6>{{ post.date | timeago }}</h6>
 		<h3>{{ post.title }}</span>
 		</h3>
 
@@ -16,14 +16,14 @@
 
 	</div>
 	<div class="overlay"></div>
-	<img
-		class="b-lazy" 
+	<div
+		class="b-lazy bg-image" 
 		src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==
 		data-src="{{ site.url }}{{ site.baseurl }}{{ post.thumbnail }}|{{ site.url }}{{ site.baseurl }}{{ post.thumbnailRetina }}"
 
 		width="1280"
 		height="720"
 		alt="{{ post.city }},{{ post.country }}, {{ post.continent }}: {{ post.title }}"
-	/>
+	></div>
 
 </a>
