--- a/_includes/global/imports.html
+++ b/_includes/global/imports.html
@@ -1,5 +1,14 @@
-<!-- sources -->
-{% capture styles %}{% include inline.css %}{% endcapture %}
-<style type="text/css">{{ styles }}</style>
+<!-- jbLazy, lazy load images -->
+<script src="//cdn.jsdelivr.net/blazy/latest/blazy.min.js" type="text/javascript"></script>
 
-<link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/style.css" media="bogus">
+<!-- Instafeed, instagram images -->
+<script src="{{ site.url }}{{ site.baseurl }}js/instafeed.min.js" type="text/javascript"></script>
+
+<!-- Native Typed, typing title -->
+<script src="{{ site.url }}{{ site.baseurl }}js/native-typed.min.js" type="text/javascript"></script>
+
+<!-- World Map
+	<script src="{{ site.url }}{{ site.baseurl }}js/mapdata.js" type="text/javascript"></script>		
+	<script src="{{ site.url }}{{ site.baseurl }}js/worldmap.js" type="text/javascript"></script>-->
+<script src='https://www.gstatic.com/charts/loader.js' type='text/javascript'></script>
+<script src='https://www.google.com/jsapi' type='text/javascript'></script>
