--- a/sass/parts/elements/_card.scss
+++ b/sass/parts/elements/_card.scss
@@ -18,7 +18,6 @@
 		}
 	}
 }
-
 .card {
 	position: relative;
 	background-color: $background-invert;
@@ -27,12 +26,13 @@
 	//max-width: 50vw;
 	overflow: hidden;
 	.title {
-		position: absolute;
+		position: relative;
 		width: 100%;
 		height: auto;
 		bottom: 0;
 		left: 0;
 		padding: $unit * 10;
+		padding-top: 30% !important;
 		z-index: 5;
 	}
 	img {
