--- a/sass/parts/elements/_headerFooter.scss
+++ b/sass/parts/elements/_headerFooter.scss
@@ -22,9 +22,6 @@
 		background-color: $Shade3;
 	}
 }
-#typing {
-	margin-left: -12px;
-}
 nav {
 	background-color: white;
 	width: calc(100vw - 6rem);
@@ -229,11 +226,27 @@ header {
 
 footer {
 	background-color: $Shade1;
-	padding: $unit;
+	position: relative;
+	z-index: 10;
 	span {
 		color: white;
 	}
 }
+
+#instafeed{
+	display: flex;
+	flex-wrap: nowrap;
+	width: 100vw;
+	a{
+		flex-grow: 1;
+		flex-shrink: 1;
+	}
+	img{
+		max-width: 100%;
+		height: auto;
+	}
+}
+
 
 @media only screen and (max-width: $maxbody) {
 }
