--- a/style.css
+++ b/style.css
@@ -69,6 +69,17 @@
   height: 100%;
 }
 
+.b-lazy {
+  -webkit-transition: opacity 500ms ease-in-out;
+  transition: opacity 500ms ease-in-out;
+  max-width: 100%;
+  opacity: 0;
+}
+
+.b-lazy.b-loaded {
+  opacity: 1;
+}
+
 @media only screen and (max-width: 860px) {
   .container {
     padding: 3rem;
@@ -90,10 +101,6 @@
   height: calc(100% - $unit * 6);
   width: 1px;
   background-color: #bbbbc7;
-}
-
-#typing {
-  margin-left: -12px;
 }
 
 nav {
@@ -369,11 +376,34 @@ header strong {
 
 footer {
   background-color: #26262e;
-  padding: 0.6rem;
+  position: relative;
+  z-index: 10;
 }
 
 footer span {
   color: white;
+}
+
+#instafeed {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  width: 100vw;
+}
+
+#instafeed a {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+}
+
+#instafeed img {
+  max-width: 100%;
+  height: auto;
 }
 
 @media only screen and (max-width: 860px) {
@@ -554,12 +584,13 @@ footer span {
 }
 
 .card .title {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: auto;
   bottom: 0;
   left: 0;
   padding: 6rem;
+  padding-top: 30% !important;
   z-index: 5;
 }
 
