--- a/_includes/global/footer.html
+++ b/_includes/global/footer.html
@@ -2,8 +2,8 @@
    <div class="container typography">
 
       <h3>Join our newsletter and never miss a trip.</h3>
-      <h4 class="highlight">We believe in a spam free inbox. That's why we will never send you more than one email a week. If you want more frequent
-         updates, consider checking out our Facebook or Instagram.</h4>
+      <h4 class="highlight">Never miss a flight, a meal, or a photo! Bring Six Feet Over to the convenience of your inbox by signing up for our mailing
+      list. But don’t worry: we’ll never bombard you with emails, but rather a weekly “你好” or “Hello!”</h4>
 
 
       
