--- a/_includes/global/imports.html
+++ b/_includes/global/imports.html
@@ -2,10 +2,10 @@
 <script src="//cdn.jsdelivr.net/blazy/latest/blazy.min.js" type="text/javascript"></script>
 
 <!-- Instafeed, instagram images -->
-<script src="{{ site.url }}{{ site.baseurl }}js/instafeed.min.js" type="text/javascript"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/js/instafeed.min.js" type="text/javascript"></script>
 
 <!-- Native Typed, typing title -->
-<script src="{{ site.url }}{{ site.baseurl }}js/native-typed.min.js" type="text/javascript"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/js/native-typed.min.js" type="text/javascript"></script>
 
 <!-- World Map
 	<script src="{{ site.url }}{{ site.baseurl }}js/mapdata.js" type="text/javascript"></script>		
