--- a/_layouts/global.html
+++ b/_layouts/global.html
@@ -7,9 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, user-scalable=yes">
 	<!-- favicon -->
-	<link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}img/favicon.ico">
+	<link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/img/favicon.ico">
 	<!--32px Favicon-->
-	<link rel="apple-touch-icon" href="{{ site.url }}{{ site.baseurl }}img/icon-apple.png" sizes="180x180">
+	<link rel="apple-touch-icon" href="{{ site.url }}{{ site.baseurl }}/img/icon-apple.png" sizes="180x180">
 	<!-- 180px App Icon -->
 	<link rel="mask-icon" href="{{ site.url }}{{ site.baseurl }}{{ site.logo }}" color="#{{ site.brand_colour }}">
 	<!-- 256px Display Icon -->
@@ -27,7 +27,7 @@
 		{{styles}}
 	</style>
 
-	<link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}style.css" media="bogus">
+	<link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/style.css" media="bogus">
 
 </head>
 
@@ -42,7 +42,7 @@
 	{% include global/scripts.html %}
 	
 	<!-- styles -->
-	<link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}style.css" async>
+	<link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/style.css" async>
 
 </body>
 </html>
