--- a/_includes/post_locations.html
+++ b/_includes/post_locations.html
@@ -1,12 +1,8 @@
-{% if post.city contains "" %}
-	<li><span class="metaCity" href="." target="_self">{{ post.city }}</span></li>
-{% endif %}
-
-{% if post.country contains "" %}
+{% if post.country contains "" or contains %}
 	<li><span class="metaCountry" href="." target="_self">{{ post.country }}</span></li>
 {% endif %}
 
-{% if post.continent contains "" %}
+{% if post.continent contains "" or contains %}
 	<li><span class="metaContinent" href="." target="_self">{{ post.continent }}</span></li>
 {% endif %}
 
