--- a/_layouts/global.html
+++ b/_layouts/global.html
@@ -41,6 +41,17 @@
 	{% include global/imports.html %}
 	{% include global/scripts.html %}
 	
+	<!-- jbLazy, lazy load images -->
+	<script src="//cdn.jsdelivr.net/blazy/latest/blazy.min.js" type="text/javascript"></script>
+	<script type='text/javascript'>
+		; (function () {
+			// Initialize
+			var bLazy = new Blazy({
+				//container: '#scrolling-container' // Default is window
+			});
+		})();
+	</script>
+	
 	<!-- styles -->
 	<link rel="stylesheet" type="text/css" href="{{ "/style.css" | relative_url }}" async>
 
