--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
-#map svg {
-  overflow: visible !important;
+.map {
+  margin-top: 3rem;
 }
 
 .wrapper {
@@ -27,6 +27,10 @@
   padding-top: 0;
   padding-bottom: 0;
   margin-top: -6rem;
+}
+
+.title h1, .title h2, .title h3, .title h4, .title h5, .title h6 {
+  text-transform: capitalize;
 }
 
 .bg-image {
@@ -581,6 +585,14 @@ footer span {
   background-color: #26262e;
   width: 100%;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .card .title {
@@ -620,7 +632,7 @@ footer span {
   margin-right: 1.8rem;
 }
 
-.card .articleMeta li::last-of-type {
+.card .articleMeta li:last-child {
   margin-right: 0;
 }
 
@@ -644,6 +656,14 @@ footer span {
           transition-delay: 0.2s;
 }
 
+.card .articleMeta.topics {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 6rem;
+  margin-right: 6rem;
+}
+
 .card .overlay {
   background: rgba(64, 64, 128, 0.7);
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(64, 64, 128, 0.82)), color-stop(75%, rgba(64, 64, 128, 0)));
@@ -656,12 +676,23 @@ footer span {
   opacity: 0.3;
 }
 
+.card h2,
 .card h3,
-.card h6 {
+.card h4,
+.card h5
+h6 {
   -webkit-transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-filter 0.1s ease-in-out;
   transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-filter 0.1s ease-in-out;
   transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1), filter 0.1s ease-in-out;
   transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1), filter 0.1s ease-in-out, -webkit-filter 0.1s ease-in-out;
+  width: 100%;
+  display: block;
+  height: auto;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .card h6 {
@@ -695,6 +726,11 @@ footer span {
   -webkit-transform: translateX(-12rem);
           transform: translateX(-12rem);
   opacity: 0;
+}
+
+.card:hover .articleMeta.topics li {
+  -webkit-transform: translateX(12rem) !important;
+          transform: translateX(12rem) !important;
 }
 
 .articleMeta {
