--- a/_layouts/global.html
+++ b/_layouts/global.html
@@ -48,6 +48,7 @@
 			// Initialize
 			var bLazy = new Blazy({
 				//container: '#scrolling-container' // Default is window
+				offset: 500;
 			});
 		})();
 	</script>
